# skyclear-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_skyclear.bat
SkyClearAI Sample Data/: README.txt  sentinel2_cloudy_raw.tif
app/: streamlit_app.py
docs/: ARCHITECTURE.md  README.md
src/: __init__.py  acquire_data.py  alignment.py  constants.py  data_pipeline.py  evaluate.py  infer.py  stitcher.py  synthetic_clouds.py  train.py
src/models/: __init__.py  baseline_inpaint.py  discriminator.py  generator.py
tests/: test_smoke.py
