[project]
name = "skyclear-ai"
version = "0.1.0"
description = "Cloud removal and surface reconstruction for optical satellite imagery with SAR fusion."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "torchvision>=0.16",
  "rasterio>=1.3",
  "streamlit>=1.31",
  "matplotlib>=3.7",
  "Pillow>=10.0",
  "pystac-client>=0.8",
  "s2cloudless>=1.4.0",
  "scikit-image>=0.20",
  "requests>=2.28"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyrefly]
search-path = ["."]


